# fastapi-LLM-code-review-assistant

./: .dockerignore  .env.example  .gitignore  BANGLA_FLOW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  redis_client.py
app/models/: __init__.py  review.py  tool_call.py
app/routers/: analytics.py  health.py  reviews.py
app/schemas/: __init__.py  analytics.py  review.py  tool_schemas.py
app/services/: cost.py  reviewer.py  tools.py
app/static/: index.html
app/utils/: exceptions.py  logging.py
tests/: conftest.py  test_health.py  test_reviewer.py  test_routes.py  test_tools.py  test_websocket.py
